--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-kakao-maps-sdk": "^1.1.24",
+    "react-naver-maps": "^0.1.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
